@@ -99,6 +99,9 @@ INCLUDE(ManageDependency)
 
 # Enable GNOME_SHELL support by set the value to 1
 SET_COMPILE_ENV(GNOME_SHELL 1 DISPLAY BOOL "Enable GNOME Shell support")
+IF(IBUS_CHEWING_LOGFILE)
+    ADD_DEFINITIONS(-DIBUS_CHEWING_LOGFILE=${IBUS_CHEWING_LOGFILE})
+ENDIF(IBUS_CHEWING_LOGFILE)
 
 SET(IBUS_MIN_VER "1.3")
 SET(CHEWING_MIN_VER "0.3.3")
