@@ -6,5 +6,7 @@ REDHAT_BUGZILLA=1027031,1028911,1045868
 - Resolves Bug 1027031 - CVE-2013-4509 ibus-chewing: ibus: visible password entry flaw [rhel-7.0]
 - Resolves Bug 1028911 - [zh_TW]'Chinese<->English' switch does not work when clicking on the Chewing menu list.
 - Resolves Bug 1045868 - ibus-chewing *again* not built with $RPM_OPT_FLAGS
-
+- Default of "Sync between caps lock and IM" is changed to "disable",
+  because the previous default "keyboard" 
+  cause bug 1028911 for GNOME Shell.
 
