@@ -1,8 +1,11 @@
-* Mon Jan 13 2014 Ding-Yi Chen <dchen at redhat.com> - 1.4.5
+* Wed Jan 15 2014 Ding-Yi Chen <dchen at redhat.com> - 1.4.5
 - Resolves Bug 1013977 - ibus-chewing needs to have ibus write-cache --system in %post and %postun
 - Resolves Bug 1027031 - CVE-2013-4509 ibus-chewing: ibus: visible password entry flaw [rhel-7.0]
 - Resolves Bug 1028911 - [zh_TW]'Chinese<->English' switch does not work when clicking on the Chewing menu list.
 - Resolves Bug 1045868 - ibus-chewing *again* not built with $RPM_OPT_FLAGS
+- Default of "Sync between caps lock and IM" is changed to "disable",
+  because the previous default "keyboard" 
+  cause bug 1028911 for GNOME Shell.
 
 * Mon Dec 23 2013 Ding-Yi Chen <dchen at redhat.com> - 1.4.4
 - Resolves Bug 842856 - ibus-chewing 1.4.3-1 not built with $RPM_OPT_FLAGS
